# aws-dev-box-template

./: .clear.sh  .continue.sh  .gitignore  .test.sh  README.md  cookiecutter.json  pyproject.toml
.secret-kv/: kv.db  secret-kv-config.json
aws_dev_box_template/: __init__.py  version.py
project-init/: config.yaml
xp/backend/local/: backend.json
xp/backend/local/state/g/s3_backend/.pulumi/backups/global/: global.1650244293701319957.json.attrs
xp/backend/local/state/g/s3_backend/.pulumi/history/global/: global-1650244293700934331.history.json  global-1650244293700934331.history.json.attrs
xp/backend/local/state/g/s3_backend/.pulumi/stacks/: global.json
xp/backend/s3/: backend.json  backend.yaml
xp/project/aws-env/: Pulumi.yaml
xp/project/awsenv/: Pulumi.dev.yaml  __main__.py
xp/project/devbox/: Pulumi.dev.yaml  __main__.py
xp/project/s3-backend-bucket/: Pulumi.global.yaml
xp/project/s3_backend/: Pulumi.global.yaml  Pulumi.yaml  __main__.py  xpulumi-project.json
{{cookiecutter.project_slug}}/xp/project/aws-env/: Pulumi.dev.yaml
{{cookiecutter.project_slug}}/xp/project/s3-backend-bucket/: Pulumi.yaml  __main__.py  xpulumi-project.json
