[tool.poetry]
name = "aws-dev-box-template"
version = "0.1.0"
description = "Python package \"aws-dev-box-template\""
authors = ["Sam McKelvie <dev@mckelvie.org>"]
license = "MIT"
keywords = []
readme = "README.md"
homepage = "https://github.com/sammck/aws-dev-box-template"
repository = "https://github.com/sammck/aws-dev-box-template.git"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dependencies.xpulumi]
git = "https://github.com/sammck/xpulumi.git"
branch = "main"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
dunamai = "^1.9.0"
python-semantic-release = "^7.25.2"
types-urllib3 = "^1.26.11"
types-PyYAML = "^6.0.5"
pylint = "^2.13.5"

[tool.poetry.scripts]

[tool.semantic_release]
version_variable = "aws_dev_box_template/version.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pylint."MESSAGES CONTROL"]
disable = ["wrong-import-order", "duplicate-code", "too-many-arguments", "missing-function-docstring", "import-outside-toplevel", "too-few-public-methods", "missing-class-docstring", "unused-import", "too-many-locals", "unused-argument", "invalid-name", "no-self-use", "global-statement", "broad-except", "too-many-branches", "too-many-statements", "exec-used", "ungrouped-imports", "subprocess-popen-preexec-fn", "multiple-statements", "too-many-public-methods", "missing-module-docstring", "too-many-instance-attributes", "too-many-nested-blocks", "unneeded-not", "unnecessary-lambda"]

[tool.pylint.FORMAT]
indent-after-paren = 4
indent-string = "  "
max-line-length = 200
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

